# badOS

./: .gitignore  CMakeLists.txt  Makefile  build.sh  debug.sh
bootloader/: linker.ld
bootloader/limine/: limine.cfg  linker.ld
bootloader/mine/long_mode/: print.asm
bootloader/mine/protected_mode/: detect_long_mode.asm  page_tables.asm  print.asm
bootloader/mine/real_mode/: load.asm  print.asm
buildenv/: Dockerfile  README.md
kernel/ASM/IDT/: idt.asm
kernel/ASM/abi/global_constructors/: crti.asm
kernel/ASM/non_abi/: CMakeLists.txt
kernel/ASM/non_abi/GDT/: gdt.asm
kernel/ASM/non_abi/IDT/: idt.asm
kernel/ASM/non_abi/Paging/: paging.asm
kernel/include/: Types.hpp
kernel/include/C/: cmemory.hpp
kernel/include/C++/: bitset.hpp  bitset_impl.hpp  byte.hpp  concepts.hpp  enum_bitmask.hpp  init.hpp  limits.hpp  type_traits.hpp  utility.hpp
kernel/include/C++/ABI/: icxxabi.hpp
kernel/include/C++/Iterators/: IteratorBase.hpp
kernel/include/Core/: Drawable.hpp  FrameBuffer.hpp  GDTEntry.hpp  GlobalDescriptorTable.hpp  GlobalDescriptorUtils.hpp  IDT.hpp  IDTEntry.hpp  ISR.hpp  Kernel.hpp  Pixel.hpp
kernel/include/Core/Drivers/: FramebufferBuffer.hpp  FramebufferDriver.hpp  TextModeUtils.hpp  VGABuffer.hpp  VGADriver.hpp
kernel/include/Core/Fonts/: FontParser.hpp  OpenTypeBitmap.hpp
kernel/include/Core/Interfaces/: ScreenManager.hpp  Screenbuffer.hpp
kernel/include/Core/Memory/: Constants.hpp  PageTable.hpp  PageTableEntry.hpp  PhysicalMemoryManager.hpp  VirtualMemoryManager.hpp
kernel/include/Core/Structures/GDT/: GDTEntry.hpp  GlobalDescriptorTable.hpp  GlobalDescriptorUtils.hpp
kernel/include/Core/Structures/IDT/: IDT.hpp  IDTEntry.hpp  ISR.hpp  Interrupts.hpp
kernel/include/Hardware/VGA/: VGA.hpp  VGAUtils.hpp
kernel/include/Ports/: Ports.hpp
kernel/src/: kernel_main.cpp
kernel/src/C/: cmemory.cpp
kernel/src/C++/: CMakeLists.txt  init.cpp
kernel/src/C++/ABI/: icxxabi.cpp
kernel/src/Core/: FrameBuffer.cpp  GDTEntry.cpp  GlobalDescriptorTable.cpp  IDT.cpp  IDTEntry.cpp  Kernel.cpp  Pixel.cpp
kernel/src/Core/Drivers/: FramebufferBuffer.cpp  FramebufferDriver.cpp  VGABuffer.cpp  VGADriver.cpp
kernel/src/Core/Fonts/: FontParser.cpp
kernel/src/Core/Interfaces/: ScreenManager.cpp
kernel/src/Core/Memory/: CMakeLists.txt  PageTable.cpp  PageTableEntry.cpp  PhysicalMemoryManager.cpp  VirtualMemoryManager.cpp
kernel/src/Core/Structures/: CMakeLists.txt
kernel/src/Core/Structures/GDT/: GDTEntry.cpp  GlobalDescriptorTable.cpp
kernel/src/Core/Structures/IDT/: IDT.cpp  IDTEntry.cpp  ISR.cpp
kernel/src/Hardware/VGA/: VGA.cpp
src/bootloader/: boot.asm
src/bootloader/long_mode/: clear.asm
src/bootloader/protected_mode/: clear.asm  elevate.asm  gdt.asm
src/bootloader/real_mode/: elevate.asm  gdt.asm
src/kernel/: Makefile
src/kernel/entry/: entry.asm
src/kernel/include/C++/: type_traits.hpp
src/kernel/src/: kernel_main.cpp
src/kernel/src/C++/ABI/: icxxabi.cpp
